--- a/01_AssignmentOperator/01_AssignmentOperator.vcxproj.filters
+++ b/01_AssignmentOperator/01_AssignmentOperator.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="input.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
