--- a/.gitignore
+++ b/.gitignore
@@ -87,9 +87,9 @@ ipch/
 *.vsp
 *.vspx
 *.sap
-*.vcxproj
-*.vcxproj.filters
-#*.vcxproj.user
+#*.vcxproj
+#*.vcxproj.filters
+*.vcxproj.user
 
 # TFS 2012 Local Workspace
 $tf/
