--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# VS Code
+*.json
+*.exe
+tempCodeRunnerFile.cpp
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
